new calls, main page, tweaks